@@ -74,10 +74,11 @@ localisation = True
 #av_false_positive = Windows Defender||
 
 [computer_list]
-# fields who are displayed on computer list page
-# separated by spaces
-# possible values are (separated by space):
+# Fields which are displayed on computer list page separated by spaces
+# Possible values are (separated by space):
 #       cn description os type user inventorynumber state entity location
+# It is possible to also add the registry keys as defined in
+# /etc/mmc/plugins/inventoryconf.ini: reg_key_1 reg_key_2 etc.
 # summary = cn description os type user owner owner_firstname owner_realname entity location model manufacturer
 
 # Are computers ordered or not ? performance issue by costless order_by
